--- a/app/css/components/_title-hgroup.scss
+++ b/app/css/components/_title-hgroup.scss
@@ -13,7 +13,7 @@ h6 {
     margin: 0;
 }
 
-h1 { font-size:76px; }
+h1 { font-size:76px; font-weight: 700; }
 h2 { font-size:46px; }
 h3 { font-size:41px; }
 h4 { font-size:33px; }
