--- a/app/css/layouts/_main-layout.scss
+++ b/app/css/layouts/_main-layout.scss
@@ -8,6 +8,14 @@ body {
     height: 1920px;
 }
 
+span.pt {
+    font-family: 'robotobold';
+}
+
+span.currency {
+    font-family: 'DB Helvethaica X 45 Li', Arial, sans-serif;
+}
+
 .title-panel {
     position: relative;
     display: flex;
