--- a/app/css/variables/_colors.scss
+++ b/app/css/variables/_colors.scss
@@ -1,11 +1,18 @@
+// ======================================================
+// App
+// ======================================================
 $white: #fff;
 $black: #181818;
 $yellow: #ffd800;
 $yellow2: #fcd402;
-
+$yellow3: #FFC600;
 $cream: #feffcf;
-
 $purple: #8e30f8;
+$blue: #0077DB;
+$brown: #815800;
+// ======================================================
+// Default
+// ======================================================
 
 $text-color: #444444;
 $link-color: #e64946;
