--- a/app/css/variables/_colors.scss
+++ b/app/css/variables/_colors.scss
@@ -6,6 +6,7 @@ $black: #181818;
 $yellow: #ffd800;
 $yellow2: #fcd402;
 $yellow3: #FFC600;
+$yellow4: #ffc800;
 $cream: #feffcf;
 $purple: #8e30f8;
 $blue: #0077DB;
