--- a/app/css/components/_title-hgroup.scss
+++ b/app/css/components/_title-hgroup.scss
@@ -19,7 +19,10 @@ h3 { font-size:41px; }
 h4 { font-size:33px; }
 h5 { font-size:27px; }
 
-p { padding:15px 0 0 0; }
+p {
+    font-size: 34px;
+    padding:15px 0 0 0;
+}
 
 /*--------------------------------------------------------------
 - Title Style
