--- a/app/css/components/_button.scss
+++ b/app/css/components/_button.scss
@@ -91,6 +91,17 @@
     box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.2);
   }
 
+  &.submit-button {
+    margin: 0 auto;
+    align-items: baseline;
+    p {
+      font-weight: 700;
+      font-size: 50px;
+      margin: 0;
+      padding: 0;
+    }
+  }
+
   &.red{
     $color: #fff;
     color: $color;
