--- a/app/css/style.scss
+++ b/app/css/style.scss
@@ -7,6 +7,7 @@
 @import "plugins/plugins";
 @import "mixin/mixin";
 @import "components/components";
+@import "pages/pages";
 @import 'form/form';
 @import "layouts/layouts";
 @import "helpers/helpers";
