Add development toolbar

--- a/app/css/components/_components.scss
+++ b/app/css/components/_components.scss
@@ -25,3 +25,7 @@
 @import "input-box";
 @import "input-with-keyboard";
 @import "jumbotron";
+// ======================================================
+// Devtools
+// ======================================================
+@import "development-toolbar";
